Added welcome page

--- a/src/assets/scss/core/base/_helpers.scss
+++ b/src/assets/scss/core/base/_helpers.scss
@@ -168,6 +168,11 @@ img.has-shadow {
 	}
 }
 
+// For left-align content 
+.left-align-content {
+	float: left;
+}
+
 // Responsive video
 .responsive-video {
 	position: relative;
