--- a/src/assets/scss/core/elements/_containers.scss
+++ b/src/assets/scss/core/elements/_containers.scss
@@ -2,6 +2,7 @@
 .container-sm,
 .container-xs {
 	width: 100%;
+	height: 100%;
 	margin: 0 auto;
 	padding-left: $container--padding__mobile;
 	padding-right: $container--padding__mobile;
