--- a/src/assets/scss/core/sections/_hero.scss
+++ b/src/assets/scss/core/sections/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+	height: 100vh;
 
 	.section-inner {
 		padding-top: $hero--padding-t__mobile;
@@ -7,11 +8,33 @@
 }
 
 .hero-inner {
+	height: 100%;
+	position:relative;
 
 	// Affects only hero full
 	> .hero-content + .hero-figure,
 	> .hero-figure + .hero-content {
 		margin-top: $hero--inner-padding-v_mobile;
+	}
+
+	> .hero-content {
+		position: absolute;
+		width: 100%;
+		top: 45%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
+		> .welcome-content {
+			display: inline-block; 
+			text-align: left;
+		}
+
+		> .subheader {
+			> .description {
+				display: inline-block;
+				text-align: left;
+			}
+		}
 	}
 
 	> .hero-figure {
