--- a/src/assets/scss/settings/elements/_buttons-and-forms.scss
+++ b/src/assets/scss/settings/elements/_buttons-and-forms.scss
@@ -7,7 +7,7 @@ $button-form--group-padding: 	12px;		// padding separating input from button in 
 
 // Buttons: text color
 $button--color: (
-	button-light: 		get-color(dark, 2),
+	button-light: 		#000000,
 	button-dark: 		get-color(light, 1),
 	button-primary: 	get-color(light, 1),
 	button-secondary:	get-color(light, 1),
@@ -19,11 +19,11 @@ $button--bg: (
 	button-light: 			get-color(light, 1),
 	button-light-hover: 	darken(get-color(light, 1), 5%),
 	button-dark: 			get-color(dark, 2),
-	button-dark-hover: 		lighten(get-color(dark, 2), 2%),
+	button-dark-hover: 		lighten(get-color(dark, 2), 5%),
 	button-primary: 		get-color(primary, 1),
-	button-primary-hover: 	lighten(get-color(primary, 1), 2%),
+	button-primary-hover: 	lighten(get-color(primary, 1), 5%),
 	button-secondary: 		get-color(secondary, 1),
-	button-secondary-hover:	lighten(get-color(secondary, 1), 2%),
+	button-secondary-hover:	lighten(get-color(secondary, 1), 5%),
 	button-disabled: 		get-color(light, 3)
 );
 
