Finish Contact Me section

--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -61,8 +61,8 @@ $border--color: (
 $icon--color: (
 	hamburger:				get-color(light, 2),			// hamburger icon
 	accordion:				get-color(primary, 1),			// accordion icon
-	social: 				get-color(primary, 1),			// social icons
-	social-hover: 			get-color(primary, 2),			// social icons (:hover)
+	social: 				get-color(secondary, 1),			// social icons
+	social-hover: 			get-color(secondary, 2),			// social icons (:hover)
 	modal:					get-color(light, 3),			// modal icon
 	modal-hover:			get-color(light, 2),			// modal icon (:hover)
     news-more:			    get-color(primary, 2),		// news - read more link arrow    
