--- a/src/assets/scss/settings/sections/_testimonial.scss
+++ b/src/assets/scss/settings/sections/_testimonial.scss
@@ -4,7 +4,7 @@ $testimonial--padding-b__mobile: 		null;		// testimonial, bottom padding (mobile
 $testimonial--padding-t__desktop: 		null;		// testimonial, top padding (desktop)
 $testimonial--padding-b__desktop: 		null;		// testimonial, bottom padding (desktop)
 $testimonial-header--padding__mobile: 	null;		// testimonial header, bottom padding (mobile)
-$testimonial-header--padding__desktop:	null;		// testimonial header, bottom padding (desktop)
+$testimonial-header--padding__desktop:	32px;		// testimonial header, bottom padding (desktop)
 $testimonial-items--padding__mobile: 	null;		// padding between testimonial items (mobile)
 $testimonial-items--padding__desktop: 	null;		// padding between testimonial items (desktop)
 $testimonial-item--width: 				344px;		// testimonial item, width
